# netifi-cpp

./: .gitignore  .travis.yml  CMakeLists.txt
cmake/: FindRSocket.cmake  FindReactiveSocket.cmake  FindYarpl.cmake  InstallFolly.cmake  InstallRSocket.cmake
proteus/framing/: ErrorCode.cpp  ErrorCode.h  Frame.cpp  Frame.h  FrameFlags.cpp  FrameFlags.h  FrameHeader.cpp  FrameHeader.h  FrameSerializer.cpp  FrameSerializer.h  FrameSerializer_v1_0.cpp  FrameSerializer_v1_0.h  FrameType.cpp  FrameType.h  ProtocolVersion.cpp  ProtocolVersion.h
proteus/test/framing/: FrameTest.cpp
